--- a/src/DevBlog/Views/Shared/_Layout.cshtml
+++ b/src/DevBlog/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DevsForum</title>
+    <title>@ViewData["Title"] - DevBlog</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">DevsForum</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">DevBlog</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">All Posts</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">Add Post</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +40,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - DevsForum</p>
+            <p>&copy; 2016 - DevBlog</p>
         </footer>
     </div>
 
