--- a/src/DevBlog/wwwroot/css/site.css
+++ b/src/DevBlog/wwwroot/css/site.css
@@ -14,7 +14,7 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 800px;
 }
 
 /* Carousel */
@@ -33,6 +33,10 @@ img.header-image {
     height: 150px !Important;
     margin: 0px auto;
     padding-top: 20px;
+}
+
+.margin-top-25 {
+    margin-top: 25px;
 }
 
 /* Hide/rearrange for smaller screens */
