List all posts page.

--- a/src/DevBlog/Views/Blog/Post.cshtml
+++ b/src/DevBlog/Views/Blog/Post.cshtml
@@ -1,15 +1,15 @@
 ﻿
-<form class="margin-top-25" method="post" action="~/BlogPost/Save">
+<form method="post" action="~/Blog/Post" class="margin-top-25">
     <div class="form-group">
-        <label for="postTitle">Title</label>
+        <label for="title">Title</label>
         <input class="form-control" id="title" name="title" placeholder="Title">
     </div>
     <div class="form-group">
-        <label for="postContent">Content</label>
+        <label for="content">Content</label>
         <textarea class="form-control" rows="12" id="content" name="content" placeholder="Content"></textarea>
     </div>
     <div class="form-group">
-        <label for="postTags">Tags</label>
+        <label for="tags">Tags</label>
         <input class="form-control" id="tags" name="tags" placeholder="Tags">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
