--- a/src/DevBlog/Views/Shared/_Layout.cshtml
+++ b/src/DevBlog/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DevBlog</title>
+    <title>DevBlog</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -30,8 +30,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="BlogPost" asp-action="List">All Posts</a></li>
-                    <li><a asp-area="" asp-controller="BlogPost" asp-action="Add">Add Post</a></li>
+                    <li><a asp-area="" asp-controller="Blog" asp-action="List">All Posts</a></li>
+                    <li><a asp-area="" asp-controller="Blog" asp-action="Post">Add Post</a></li>
                 </ul>
             </div>
         </div>
