View funationality and partially created the edit.

--- a/src/DevBlog/Views/Blog/Post.cshtml
+++ b/src/DevBlog/Views/Blog/Post.cshtml
@@ -1,16 +1,30 @@
-﻿
+﻿@model DevBlog.Models.PostModel
+@{ 
+    string tags = null;
+    if(Model.TagNames != null)
+    {
+        tags = string.Join(",", Model.TagNames);
+    }
+}
+
 <form method="post" action="~/Blog/Post" class="margin-top-25">
+    <input type="hidden" id="Id" name="Id" value="@Model.Id" />
     <div class="form-group">
         <label for="title">Title</label>
-        <input class="form-control" id="title" name="title" placeholder="Title">
+        <input class="form-control" id="title" name="title" placeholder="Title" value="@Model.Title">
     </div>
     <div class="form-group">
         <label for="content">Content</label>
-        <textarea class="form-control" rows="12" id="content" name="content" placeholder="Content"></textarea>
+        <textarea class="form-control" rows="12" id="content" name="content" placeholder="Content">
+            @if (Model.Content != null)
+            {
+                @Model.Content.Replace("<br />", "\n")
+            }
+        </textarea>
     </div>
     <div class="form-group">
         <label for="tags">Tags</label>
-        <input class="form-control" id="tags" name="tags" placeholder="Tags">
+        <input class="form-control" id="tags" name="tags" placeholder="Tags" value="@tags">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
