--- a/src/DevBlog/Views/Blog/List.cshtml
+++ b/src/DevBlog/Views/Blog/List.cshtml
@@ -6,9 +6,9 @@
 
 @foreach (var post in Model)
 {
-    <div class="post" data-post-id="@post.Id">
-        <h3>@post.Title</h3>
-        <div>
+    <div class="margin-top-20" data-post-id="@post.Id">
+        <h3><a href="~/Blog/View/@post.Id" class="post-title">@post.Title</a></h3>
+        <div class="">
             @post.Content
         </div>
         <div class="margin-top-10">
