--- a/src/DevBlog/Views/Blog/Index.cshtml
+++ b/src/DevBlog/Views/Blog/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     int length = Model.Count();
     int index = 1;
+    bool isSearchExecuted = Context.Request.Path != "/";
 }
 
 
@@ -15,7 +16,7 @@
         </form>
     </div>
 
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 margin-top-20">
         @foreach (var post in Model)
         {
             <div class="margin-top-20" data-post-id="@post.Id">
@@ -42,4 +43,17 @@
             index++;
         }
     </div>
+
+    @if (isSearchExecuted && length == 0)
+    {
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 margin-top-20 text-center">
+            <h3>No results found by this search creteria</h3>
+        </div>
+    }
+    else if (length == 0)
+    {
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 margin-top-20 text-center">
+            <h3>Instead of exploring the whole content, try to search by keywords to find what you are looking for...</h3>
+        </div>
+    }
 </div>
