--- a/src/DevBlog/Views/Blog/Post.cshtml
+++ b/src/DevBlog/Views/Blog/Post.cshtml
@@ -12,6 +12,7 @@
     <div class="form-group">
         <label for="title">Title</label>
         <input class="form-control" id="title" name="title" placeholder="Title" value="@Model.Title">
+        <span asp-validation-for="Title" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label for="content">Content</label>
@@ -21,10 +22,12 @@
                 @Model.Content.Replace("<br />", "\n")
             }
         </textarea>
+        <span asp-validation-for="Content" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label for="tags">Tags</label>
         <input class="form-control" id="tags" name="tags" placeholder="Tags" value="@tags">
+        <span asp-validation-for="Tags" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
