--- a/src/DevBlog/Views/Blog/Index.cshtml
+++ b/src/DevBlog/Views/Blog/Index.cshtml
@@ -19,7 +19,7 @@
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 margin-top-20">
         @foreach (var post in Model)
         {
-            <div class="margin-top-20" data-post-id="@post.Id">
+            <div class="blog-post margin-top-20" data-post-id="@post.Id">
                 <h3>
                     <a href="~/Blog/View/@post.Id" class="post-title">@post.Title</a>
                     <a href="~/Blog/Delete/@post.Id"><img src="~/images/delete.png" class="icon" /></a>
