--- a/src/DevBlog/Views/Blog/List.cshtml
+++ b/src/DevBlog/Views/Blog/List.cshtml
@@ -8,7 +8,7 @@
 
 @foreach (var post in Model)
 {
-    <div class="margin-top-20" data-post-id="@post.Id">
+    <div class="blog-post margin-top-20" data-post-id="@post.Id">
         <h3>
             <a href="~/Blog/View/@post.Id" class="post-title">@post.Title</a>
             <a href="~/Blog/Delete/@post.Id"><img src="~/images/delete.png" class="icon" /></a>
