--- a/src/DevBlog/Views/Blog/Post.cshtml
+++ b/src/DevBlog/Views/Blog/Post.cshtml
@@ -1,4 +1,5 @@
 ﻿@model DevBlog.Models.PostModel
+
 @{ 
     string tags = null;
     if(Model.TagNames != null)
@@ -26,7 +27,7 @@
     </div>
     <div class="form-group">
         <label for="tags">Tags</label>
-        <input class="form-control" id="tags" name="tags" placeholder="Tags" value="@tags">
+        <input class="form-control" id="tags" name="tags" placeholder="Tags" value="@tags" data-toggle="tooltip" data-placement="right" title="Separate tags with comma">
         <span asp-validation-for="Tags" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
