Added delete confirmation dialog and tooltip.

--- a/src/DevBlog/Views/Blog/List.cshtml
+++ b/src/DevBlog/Views/Blog/List.cshtml
@@ -11,8 +11,8 @@
     <div class="blog-post margin-top-20" data-post-id="@post.Id">
         <h3>
             <a href="~/Blog/View/@post.Id" class="post-title">@post.Title</a>
-            <a href="~/Blog/Delete/@post.Id"><img src="~/images/delete.png" class="icon" /></a>
-            <a href="~/Blog/Post/@post.Id"><img src="~/images/pencil.png" class="icon" /></a>
+            <img src="~/images/delete.png" data-post-id="@post.Id" class="icon delete-icon" />
+            <a href="~/Blog/Post/@post.Id"><img src="~/images/pencil.png" class="icon"></a>
         </h3>
         <div class="">
             @post.Content
