--- a/src/DevBlog/Views/Shared/_Layout.cshtml
+++ b/src/DevBlog/Views/Shared/_Layout.cshtml
@@ -45,6 +45,29 @@
         </footer>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="confirmation-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Confirmation</h4>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this record?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary delete-confirmed">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <form action="~/Blog/Delete" method="post">
+        <input type="hidden" id="postId" name="postId" value=""/>
+    </form>
+
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
