--- a/src/DevBlog/Views/Blog/Index.cshtml
+++ b/src/DevBlog/Views/Blog/Index.cshtml
@@ -11,7 +11,7 @@
         <img src="~/images/elasticsearch-logo.png" alt="elasticsearch" class="img-responsive header-image" />
         <form method="post" action="~/Blog/Index" class="margin-top-25">
             <div class="form-group form-group-lg">
-                <input id="terms" name="terms" class="input-lg full-width search-field" placeholder="What are you looking for?" />
+                <input id="terms" name="terms" class="input-lg full-width search-field" placeholder="What are you looking for?" value="@ViewBag.Terms" />
             </div>
         </form>
     </div>
@@ -53,7 +53,7 @@
     else if (length == 0)
     {
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 margin-top-20 text-center">
-            <h3>Instead of exploring the whole content, try to search by keywords to find what you are looking for...</h3>
+            <h3>Ssearch by keywords to find what you are looking for...</h3>
         </div>
     }
 </div>
