--- a/src/DevBlog/Views/Blog/List.cshtml
+++ b/src/DevBlog/Views/Blog/List.cshtml
@@ -14,7 +14,7 @@
             <img src="~/images/delete.png" data-post-id="@post.Id" class="icon delete-icon" />
             <a href="~/Blog/Post/@post.Id"><img src="~/images/pencil.png" class="icon"></a>
         </h3>
-        <div class="">
+        <div class="controled-text-length">
             @post.Content
         </div>
         <div class="margin-top-10">
