--- a/src/DevBlog/Views/Blog/Search.cshtml
+++ b/src/DevBlog/Views/Blog/Search.cshtml
@@ -9,7 +9,7 @@
 <div class="row home-page-container">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 align-center">
         <img src="~/images/elasticsearch-logo.png" alt="elasticsearch" class="img-responsive header-image" />
-        <form method="post" action="~/Blog/Index" class="margin-top-25">
+        <form method="post" action="~/Blog/Search" class="margin-top-25">
             <div class="form-group form-group-lg">
                 <input id="terms" name="terms" class="input-lg full-width search-field" placeholder="What are you looking for?" value="@ViewBag.Terms" />
             </div>
@@ -25,7 +25,7 @@
                     <img src="~/images/delete.png" data-post-id="@post.Id" class="icon delete-icon" />
                     <a href="~/Blog/Post/@post.Id"><img src="~/images/pencil.png" class="icon" /></a>
                 </h3>
-                <div class="">
+                <div class="controled-text-length">
                     @post.Content
                 </div>
                 <div class="margin-top-10">
@@ -53,7 +53,7 @@
     else if (length == 0)
     {
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 margin-top-20 text-center">
-            <h3>Ssearch by keywords to find what you are looking for...</h3>
+            <h3>Search by keywords to find what you are looking for...</h3>
         </div>
     }
 </div>
